# foam2exodus

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
examples/elbow/constant/: transportProperties
examples/elbow/constant/polyMesh/: boundary
examples/elbow/system/: controlDict  fvSchemes  fvSolution
examples/mixer/0/: U  k  omega  p
examples/mixer/constant/: RASProperties  transportProperties
examples/mixer/constant/polyMesh/: boundary  cellZones  faceZones  faces  neighbour  owner  points
examples/mixer/system/: controlDict  decomposeParDict  fvSchemes  fvSolution
examples/pitzDaily/: convert.sh
examples/pitzDaily/constant/polyMesh/: boundary  faces  neighbour  owner  points
examples/pitzDaily/system/: blockMeshDict
examples/turbCHTChannel/: convert.sh
examples/turbCHTChannel/constant/polyMesh/: boundary  cellZones  faces  neighbour  owner  points
src/: ExodusWriter.cpp  ExodusWriter.h  MergedMeshReader.cpp  MergedMeshReader.h  OpenFOAMMeshReader.cpp  OpenFOAMMeshReader.h
tools/maintenance/: format_code
